--- a/js/src/components/bg-change/bg-change.css
+++ b/js/src/components/bg-change/bg-change.css
@@ -1,4 +1,4 @@
-.wrapper {
+.bg-change {
     position: absolute;
     z-index: 11;
     right: 1rem;
@@ -10,27 +10,16 @@
     background: var(--light-color);
     border: 1px solid var(--dark-color);
 }
-button {
+.bg-change button {
     cursor: pointer;
     padding: .1rem;
     margin: 0 .2rem;
     border: 0;
 }
-button:hover {
+.bg-change button:hover {
     transform: scale(1.05);
 }
-img {
+.bg-change img {
     width: 100px;
     aspect-ratio: 16/9;
-}
-
-:is(.scroll-x,.scroll-y)::-webkit-scrollbar {
-    height: .5rem;
-    width: .5rem;
-    background: var(--light-color);
-}
-:is(.scroll-x,.scroll-y)::-webkit-scrollbar-thumb {
-    cursor: pointer;
-    background: var(--brand-color);
-    border-radius: 10rem;
 }
