--- a/js/src/components/zoom-buttons/zoom-buttons.css
+++ b/js/src/components/zoom-buttons/zoom-buttons.css
@@ -1,16 +1,16 @@
-.wrapper {
+.zoom-buttons {
     position: absolute;
     z-index: 11;
     left: 1rem;
     top: 1rem;
 }
-button {
+.zoom-buttons button {
     cursor: pointer;
     font-size: 1rem;
-    padding: 1rem;
+    padding: .5rem 1rem;
     color: var(--dark-color);
     font-family: var(--font-vera);
 }
-i {
+.zoom-buttons i {
     color: var(--dark-color);
 }
